charon/tests/ui/unsupported/gat.out
thread 'rustc' panicked at /rustc/730d5d4095a264ef5f7c0a0781eea68c15431d45/compiler/rustc_type_ir/src/binder.rs:711:9:
type parameter `T/#1` (T/#1/1) out of range when instantiating, args=[Self/#0]
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
error: Thread panicked when extracting item `test_crate::ArraySize`.
 --> tests/ui/unsupported/gat.rs:5:1
  |
5 | trait ArraySize {
  | ^^^^^^^^^^^^^^^

error: Ignoring the following item due to an error: test_crate::ArraySize
 --> tests/ui/unsupported/gat.rs:5:1
  |
5 | trait ArraySize {
  | ^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

Error: Charon driver exited with code 101
